plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.0'
    id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.plannie'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '17'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // Spring Boot Starters
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-webflux' // OpenAI API 호출용

    // Database
    runtimeOnly 'com.mysql:mysql-connector-j'
    runtimeOnly 'com.h2database:h2' // 테스트용
    runtimeOnly 'org.postgresql:postgresql'

    // pgvector (벡터 유사도 검색)
    implementation 'com.pgvector:pgvector:0.1.6'

    // PDF 파싱
    implementation 'org.apache.pdfbox:pdfbox:3.0.1'

    // QueryDSL
    implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
    annotationProcessor 'com.querydsl:querydsl-apt:5.0.0:jakarta'
    annotationProcessor 'jakarta.annotation:jakarta.annotation-api'
    annotationProcessor 'jakarta.persistence:jakarta.persistence-api'

    // JWT
    implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'

    // Resilience4j (Circuit Breaker)
    implementation 'io.github.resilience4j:resilience4j-spring-boot3:2.1.0'

    // Swagger (API 문서화)
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'

    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // Test
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testImplementation 'org.testcontainers:junit-jupiter'
    testImplementation 'org.testcontainers:mysql'
}

// 기본 테스트 태스크 (fast 태그만 실행, 태그 없는 테스트도 실행)
tasks.named('test') {
    useJUnitPlatform {
        // 시스템 프로퍼티로 태그 지정 가능, 기본값은 fast
        def tags = System.getProperty('test.tags', 'fast')
        if (tags != 'all') {
            includeTags tags.split(',')
        }
    }
}

// Critical 테스트 (동시성, 트랜잭션 등 중요한 테스트)
task criticalTest(type: Test) {
    useJUnitPlatform {
        includeTags 'critical'
    }
    description = 'Run critical tests including concurrency tests'
}

// 통합 테스트 (모든 @SpringBootTest)
task integrationTest(type: Test) {
    useJUnitPlatform {
        includeTags 'integration'
    }
    description = 'Run all integration tests'
}

// 모든 테스트 실행
task allTest(type: Test) {
    useJUnitPlatform()
    description = 'Run all tests regardless of tags'
}

// QueryDSL 설정
def querydslDir = layout.buildDirectory.dir("generated/querydsl").get().asFile

sourceSets {
    main.java.srcDirs += [querydslDir]
}

tasks.withType(JavaCompile) {
    options.generatedSourceOutputDirectory = file(querydslDir)
}

clean.doLast {
    file(querydslDir).deleteDir()
}
